# cosmic-settings

./: .gitignore  .releaserc.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  Taskfile.yml
.github/workflows/: release.yaml
cosmic-settings/: Cargo.toml
cosmic-settings/src/: app.rs  icon_helper.rs  localize.rs  main.rs  theme.rs
cosmic-settings/src/pages/: mod.rs
cosmic-settings/src/pages/applications/: default_apps.rs  mod.rs  startup_apps.rs
cosmic-settings/src/pages/bluetooth/: mod.rs
cosmic-settings/src/pages/desktop/appearance/: drawer.rs  font_config.rs  mod.rs  theme_manager.rs
cosmic-settings/src/pages/desktop/panel/: applets_inner.rs  inner.rs
cosmic-settings/src/pages/desktop/wallpaper/: mod.rs
cosmic-settings/src/pages/display/: arrangement.rs  night_light.rs
cosmic-settings/src/pages/input/: mouse.rs  touchpad.rs
cosmic-settings/src/pages/input/keyboard/: mod.rs
cosmic-settings/src/pages/input/keyboard/shortcuts/: common.rs  custom.rs  mod.rs
cosmic-settings/src/pages/networking/: mod.rs  wifi.rs  wired.rs
cosmic-settings/src/pages/sound/: mod.rs
cosmic-settings/src/pages/system/: about.rs
cosmic-settings/src/pages/system/users/: mod.rs
cosmic-settings/src/pages/time/: date.rs  region.rs
cosmic-settings/src/widget/: mod.rs
i18n/en/: cosmic_settings.ftl
i18n/lt/: cosmic_settings.ftl
packaging/rpm/: build-rpm.sh  cosmic-settings.spec
pkg/rpm/: cosmic-settings.spec
resources/applications/: com.system76.CosmicSettings.desktop
subscriptions/network-manager/src/: lib.rs
