[workspace]
members = ["cosmic-settings", "crates/*", "page", "pages/*", "subscriptions/*"]
default-members = ["cosmic-settings"]
resolver = "3"

[workspace.package]
rust-version = "1.85"

[workspace.dependencies]
cosmic-randr = { git = "https://github.com/pop-os/cosmic-randr" }
tokio = { version = "1.49.0", features = ["macros"] }

[workspace.dependencies.libcosmic]
features = ["dbus-config", "desktop", "multi-window", "winit", "tokio", "qr_code"]
git = "https://github.com/playtron-os/libcosmic"
branch = "feat/reskin"

[workspace.dependencies.cosmic-config]
git = "https://github.com/playtron-os/libcosmic"
branch = "feat/reskin"

[workspace.dependencies.cosmic-bg-config]
git = "https://github.com/pop-os/cosmic-bg"

[workspace.dependencies.cosmic-comp-config]
git = "https://github.com/playtron-os/cosmic-comp"
rev = "a913b75"
features = ["output"]

[workspace.dependencies.cosmic-idle-config]
git = "https://github.com/pop-os/cosmic-idle"

[workspace.dependencies.cosmic-panel-config]
git = "https://github.com/pop-os/cosmic-panel"

[workspace.dependencies.cosmic-randr-shell]
git = "https://github.com/pop-os/cosmic-randr"

[workspace.dependencies.sctk]
version = "0.20"
package = "smithay-client-toolkit"

[profile.dev]
opt-level = 3
lto = "off"

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"

[profile.release-with-debug]
inherits = "release"
lto = "off"
debug = true

# Pin cosmic-text to version compatible with our iced submodule
[patch.'https://github.com/pop-os/cosmic-text.git']
cosmic-text = { git = "https://github.com/pop-os/cosmic-text//", rev = "d5a972a" }

# [patch.'https://github.com/pop-os/cosmic-protocols']
# cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols//", rev = "d0e95be" }
# cosmic-client-toolkit = { git = "https://github.com/pop-os/cosmic-protocols//", rev = "d0e95be" }

# [patch.'https://github.com/pop-os/cosmic-settings-daemon']
# cosmic-settings-config = { git = "https://github.com/pop-os/cosmic-settings-daemon//", branch = "input_nobuild" }

# Redirect pop-os/libcosmic to playtron-os fork feat/reskin branch
[patch.'https://github.com/pop-os/libcosmic']
libcosmic = { git = "https://github.com/playtron-os/libcosmic", branch = "feat/reskin" }
cosmic-config = { git = "https://github.com/playtron-os/libcosmic", branch = "feat/reskin" }
cosmic-theme = { git = "https://github.com/playtron-os/libcosmic", branch = "feat/reskin" }
iced = { git = "https://github.com/playtron-os/libcosmic", branch = "feat/reskin" }
iced_core = { git = "https://github.com/playtron-os/libcosmic", branch = "feat/reskin" }
iced_runtime = { git = "https://github.com/playtron-os/libcosmic", branch = "feat/reskin" }
iced_renderer = { git = "https://github.com/playtron-os/libcosmic", branch = "feat/reskin" }
iced_widget = { git = "https://github.com/playtron-os/libcosmic", branch = "feat/reskin" }
iced_futures = { git = "https://github.com/playtron-os/libcosmic", branch = "feat/reskin" }
iced_accessibility = { git = "https://github.com/playtron-os/libcosmic", branch = "feat/reskin" }
iced_tiny_skia = { git = "https://github.com/playtron-os/libcosmic", branch = "feat/reskin" }
iced_winit = { git = "https://github.com/playtron-os/libcosmic", branch = "feat/reskin" }
iced_wgpu = { git = "https://github.com/playtron-os/libcosmic", branch = "feat/reskin" }
iced_graphics = { git = "https://github.com/playtron-os/libcosmic", branch = "feat/reskin" }

# For local development (uncomment and comment out the above patch section)
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
# iced = { path = "../libcosmic/iced" }
# iced_core = { path = "../libcosmic/iced/core" }
# iced_runtime = { path = "../libcosmic/iced/runtime" }
# iced_renderer = { path = "../libcosmic/iced/renderer" }
# iced_widget = { path = "../libcosmic/iced/widget" }
# iced_futures = { path = "../libcosmic/iced/futures" }
# iced_accessibility = { path = "../libcosmic/iced/accessibility" }
# iced_tiny_skia = { path = "../libcosmic/iced/tiny_skia" }
# iced_winit = { path = "../libcosmic/iced/winit" }
# iced_wgpu = { path = "../libcosmic/iced/wgpu" }
# iced_graphics = { path = "../libcosmic/iced/graphics" }

# [patch.'https://github.com/playtron-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
# iced = { path = "../libcosmic/iced" }
# iced_core = { path = "../libcosmic/iced/core" }
# iced_runtime = { path = "../libcosmic/iced/runtime" }
# iced_renderer = { path = "../libcosmic/iced/renderer" }
# iced_widget = { path = "../libcosmic/iced/widget" }
# iced_futures = { path = "../libcosmic/iced/futures" }
# iced_accessibility = { path = "../libcosmic/iced/accessibility" }
# iced_tiny_skia = { path = "../libcosmic/iced/tiny_skia" }
# iced_winit = { path = "../libcosmic/iced/winit" }
# iced_wgpu = { path = "../libcosmic/iced/wgpu" }
# iced_graphics = { path = "../libcosmic/iced/graphics" }

# [patch.'https://github.com/pop-os/dbus-settings-bindings']
# cosmic-dbus-networkmanager = { path = "../dbus-settings-bindings/networkmanager" }
# upower_dbus = { path = "../dbus-settings-bindings/upower" }
# nm-secret-agent-manager = { git = "https://github.com/pop-os/dbus-settings-bindings//", branch = "nm-secret-agent" }
